--- a/serverless.yml
+++ b/serverless.yml
@@ -151,6 +151,7 @@ resources:
     Database:
       Type: AWS::RDS::DBInstance
       Properties:
+        DBInstanceIdentifier: ${self:service}-${self:provider.stage}
         Engine: postgres
         AllocatedStorage: 20
         EngineVersion: 11.2
