--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "pg": "^7.11.0"
+    "express": "^4.17.1",
+    "pg": "^7.11.0",
+    "serverless-http": "^2.0.2"
   },
   "devDependencies": {
     "serverless": "^1.46.1",
